--- a/wechat_api/wechat_api.ipynb
+++ b/wechat_api/wechat_api.ipynb
@@ -394,7 +394,7 @@
     "Conclusion:\n",
     "\n",
     "1. I have more friends in New York than in Beijing, possibly because I only started to use WeChat after I came here. Because geo location can be changed by users, some outlier locations such as places in Africa are likely jokes.  \n",
-    "2. I have slightly more Male friends than Female, although I feel there are more girls in my social circle. Perhaps because I graduated from a university known for enginnering hence more alumni here.  "
+    "2. I have slightly more Male friends than Female in both coasts, although I feel there are more girls in my social circle. Perhaps because I graduated from a university known for enginnering hence more alumni here.  "
    ]
   },
   {
