--- a/wechat_api/wechat_api.ipynb
+++ b/wechat_api/wechat_api.ipynb
@@ -147,7 +147,7 @@
     "library(ggplot2)\n",
     "df <- data.frame(\n",
     "    group = c(\"Male\", \"Female\", \"Ohter\"),\n",
-    "    value = c(46.98, 42.54, (100-46.98- 42.54))\n",
+    "    value = c(46.98, 42.54, 10.48)\n",
     ")\n",
     "ggplot(df, aes(x=\"\", y=value, fill=group))+ \n",
     "    geom_bar(width = 1, stat = \"identity\",alpha=0.6)+ \n",
